Update bad translations

--- a/CaracterizacionAreas/CaracterizacionAreas.tex
+++ b/CaracterizacionAreas/CaracterizacionAreas.tex
@@ -1,7 +1,7 @@
-El presente trabajo fue desarrollado para el uso libre y futura implementación en proyectos de software. Específicamente en el ambiente de la programación Web, para su utilización en áreas en las cuales se usa como base la librería React, ya que nuestro trabajo funciona sobre React.
+bibliotecaEl presente trabajo fue desarrollado para el uso libre y futura implementación en proyectos de software. Específicamente en el ambiente de la programación Web, para su utilización en áreas en las cuales se usa como base la biblioteca React, ya que nuestro trabajo funciona sobre React.
  \newline
   \newline
-Esta librería se encuentra publicada en el gestor de paquetes de JavaScript llamado NPM. 
+Esta biblioteca se encuentra publicada en el gestor de paquetes de JavaScript llamado NPM. 
  \newline
   \newline
-El rol que toma más partido en el uso de nuestra librería es el Front-End, ya que es el área que desarrolla la parte visual para el software. La librería brinda la facilidad de implementar elementos como botones, imágenes, campos de texto, etiquetas de texto, etc. de una manera simple y sin necesidad de darle un diseño a cada elemento al dar parámetros simples como el como pueden ser color y tamaño.
+El rol que toma más partido en el uso de nuestra biblioteca es el Front-End, ya que es el área que desarrolla la parte visual para el software. La biblioteca brinda la facilidad de implementar elementos como botones, imágenes, campos de texto, etiquetas de texto, etc. de una manera simple y sin necesidad de darle un diseño a cada elemento al dar parámetros simples como el como pueden ser color y tamaño.
