--- a/Conclusiones/conclusion.tex
+++ b/Conclusiones/conclusion.tex
@@ -1,4 +1,4 @@
-Una vez el desarrollo de la librería finalizado, y la herramienta publicada, se recomienda usar como documentación las tablas de propiedades que se encuentran dentro del capítulo 8.2, tablas las cuales muestran las propiedades que pueden ser modificadas en cada uno de los componentes para su correcto funcionamiento.
+Una vez el desarrollo de la biblioteca finalizado, y la herramienta publicada, se recomienda usar como documentación las tablas de propiedades que se encuentran dentro del capítulo 8.2, tablas las cuales muestran las propiedades que pueden ser modificadas en cada uno de los componentes para su correcto funcionamiento.
 También se recomienda mantener siempre la versión más reciente que se encuentre publicada.
 
-Finalmente se concluye con el pensamiento de no reinventar la rueda ya que existen múltiples librerías que nos agiliza nuestro trabajo, y es fácil encontrar librerías que se adecuen a cualquier proyecto en el que estamos trabajando. Así hacemos que lo complejo sea decidir una librería y no el desarrollo en sí mismo.
+Finalmente se concluye con el pensamiento de no reinventar la rueda ya que existen múltiples bibliotecas que nos agiliza nuestro trabajo, y es fácil encontrar bibliotecas que se adecuen a cualquier proyecto en el que estamos trabajando. Así hacemos que lo complejo sea decidir una biblioteca y no el desarrollo en sí mismo.
