--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -40,8 +40,6 @@
 	\pagenumbering{Roman}
 	\includepdf[pages=-]{portada.pdf}
 	
-	\citep{einstein} 
-	
 	\chapter* {Copia del Oficio de Impresión definitiva División de Estudios }
 	
 	\chapter* {Copia del Oficio de Impresión definitiva Sinodales}
@@ -93,10 +91,10 @@
 			\section {Test }
 				\input{./Procedimiento/test.tex}
 				
-			\section {Publicación de la librería en NPM }
+			\section {Publicación de la biblioteca en NPM }
 				\input{./Procedimiento/publicacion.tex}
 			
-			\section {Diferencia entre el uso nativo de React y esta librería}
+			\section {Diferencia entre el uso nativo de React y esta biblioteca}
 				\input {./Procedimiento/diferencia.tex}
 			
 		
