--- a/MarcoTeorico/marcoTeorico.tex
+++ b/MarcoTeorico/marcoTeorico.tex
@@ -1,12 +1,12 @@
     \begin{itemize}
     
-    	\item \textbf{Librería Front-end:} Una librería Front-end \cite{frontEnd2}es una herramienta que es agregada a nuestros proyectos, en este caso Web, el cual incorpora elementos que otras personas o equipos ya desarrollaron, sumando funcionalidad a nuestra Web, reduce el mantenimiento y el tiempo de desarrollo, algunas características que existen actualmente y pueden agregarse van desde gráficas, animaciones, mapas etc. 
+    	\item \textbf{biblioteca Front-end:} Una biblioteca Front-end \cite{frontEnd2}es una herramienta que es agregada a nuestros proyectos, en este caso Web, el cual incorpora elementos que otras personas o equipos ya desarrollaron, sumando funcionalidad a nuestra Web, reduce el mantenimiento y el tiempo de desarrollo, algunas características que existen actualmente y pueden agregarse van desde gráficas, animaciones, mapas etc. 
       
        \item \textbf{NPM :} NPM \cite{npm} es un gestor de paquetes que nos permite agregar dependencias a cualquier proyecto basado en Javascript, esto es posible con un cliente de líneas de comandos que es útil para poner o quitar los paquetes que deseamos. La configuración consta de un archivo en el cual contiene una lista de las dependencias que se quieren instalar en nuestro proyecto. Actualmente existen miles de paquetes que pueden ser descargados de manera gratuita y de igual manera permite colaborar. 
        
-       \item \textbf{ React :} React \cite{react} es una librería de Javascript para el desarrollo de interfaces de usuario (Front-end), famosa por la posibilidad de hacer fácilmente Webs de usa sola página. React fue desarrollada por Facebook y con el paso del tiempo, conocidas empresas han empezado a implementarlo en sus proyectos. 
+       \item \textbf{ React :} React \cite{react} es una biblioteca de Javascript para el desarrollo de interfaces de usuario (Front-end), famosa por la posibilidad de hacer fácilmente Webs de usa sola página. React fue desarrollada por Facebook y con el paso del tiempo, conocidas empresas han empezado a implementarlo en sus proyectos. 
     React nos permite desarrollar de una forma más ordenada y con el menos código necesario. 
-    Se considera que React no es un Framework en comparación con ANGULAR o EMBER porque no tiene cada una de las áreas que propone el modelo vista controlador, este solo se encarga de las vistas. 
+    Se considera que React no es un marco de trabajo en comparación con ANGULAR o EMBER porque no tiene cada una de las áreas que propone el modelo vista controlador, este solo se encarga de las vistas. 
     Uno de los puntos fuertes de React es que cuenta con un DOM virtual el cual es almacenado en memoria, esto provoca que cuando algo cambie este se va reflejado en memoria de una forma más rápida, después el DOM virtual será comparado con el DOM del navegador y solo actualizara lo que encuentre diferente. 
     React funciona en base a componentes que pueden ser reusados cuantas veces sea necesario, una forma fácil de entenderlo puede ser como la programación orientada a objetos al hacer una instancia de una clase, estos componentes pueden tener un estado, que es encapsulado por sí solo, de manera local por cada uno y puede ser actualizado.
     Los tres elementos principales de React son los siguientes:
@@ -14,7 +14,7 @@
  
  
  \item \textbf{Componente:}Una manera fácil de explicar un componente en React es compararlo con la programación orientada a objetos, en la cual un componente es un objeto, en el que este es una base ya establecida con propiedades. Si se instancian varios objetos de el mismo tipo, estos tendrán características en común pero con ciertas propiedades que los hacen distintos entre ellos. Con este principio podemos crear varios componentes en los cuales solo cambia algún elemento diferencial, como un texto una imagen etc.
-  \item \textbf{Estado:}El estado en react siguiendo la analogía de la programación orientada a objetos, son los atributos de la clase, pero estos son internamente manejados por React, esto se refiere a que para actualizar el estado se debe usar una función proporcionada por la librería.
+  \item \textbf{Estado:}El estado en react siguiendo la analogía de la programación orientada a objetos, son los atributos de la clase, pero estos son internamente manejados por React, esto se refiere a que para actualizar el estado se debe usar una función proporcionada por la biblioteca.
    \item \textbf{Props:}Los props son los parámetros  que se le da a nuestro componente para que este actúe de manera diferente a los otros componentes de el mismo tipo.
  \end{itemize}
  React crea un árbol en el cual hace una copia de el DOM que guarda en la memoria RAM, una de las principales ventajas de React es la que aquí se trata. Una vez el árbol creado, este espera a que alguno de los miembros del estado se actualice y actualiza el nodo que depende de ese estado. Con esto actualiza el DOM del navegador pero solo la parte diferencia, agilizando todo el proceso.
