--- a/Objetivos/objetivosGenerales.tex
+++ b/Objetivos/objetivosGenerales.tex
@@ -1,1 +1,1 @@
-Desarrollar una librería para el desarrollo de páginas Web, especialmente para el área de front-end, publicada en el gestor de paquetes de JavaScript “NPM”, usando el framework React, permitiéndonos la utilización de componentes para facilitar, agilizar y mejorar el maquetado de una página Web, incluyendo prácticas de diseño UI/UX que permiten que el usuario llegue a entender el funcionamiento de la aplicación sin que se requiera un entrenamiento de la misma, haciendo el sito que implemente la librería fácil de usar y atractiva visualmente. 
+Desarrollar una biblioteca para el desarrollo de páginas Web, especialmente para el área de front-end, publicada en el gestor de paquetes de JavaScript “NPM”, usando el marco de trabajo React, permitiéndonos la utilización de componentes para facilitar, agilizar y mejorar el maquetado de una página Web, incluyendo prácticas de diseño UI/UX que permiten que el usuario llegue a entender el funcionamiento de la aplicación sin que se requiera un entrenamiento de la misma, haciendo el sito que implemente la biblioteca fácil de usar y atractiva visualmente. 
