--- a/Procedimiento/desarrollo.tex
+++ b/Procedimiento/desarrollo.tex
@@ -1,5 +1,5 @@
 \subsection{Configuración Archivo Inicial}
-El proyecto contendrá un nodo raíz el cual será el que tendrá los llamados al conjunto de elementos que tendrá nuestra librería. Anteriormente se creó un directorio llamado “src” en la raíz de “crown”, dentro de “src” debemos crear un archivo llamado “index.js” este es un archivo de JavaScript el cual definiremos como punto de inicio de Webpack  y a partir de este buscará todas las importaciones de otros submódulos. Con el siguiente comando creamos el archivo requerido.
+El proyecto contendrá un nodo raíz el cual será el que tendrá los llamados al conjunto de elementos que tendrá nuestra biblioteca. Anteriormente se creó un directorio llamado “src” en la raíz de “crown”, dentro de “src” debemos crear un archivo llamado “index.js” este es un archivo de JavaScript el cual definiremos como punto de inicio de Webpack  y a partir de este buscará todas las importaciones de otros submódulos. Con el siguiente comando creamos el archivo requerido.
 \newline
 \newline
      \begin{figure}[H]
@@ -8,7 +8,7 @@ El proyecto contendrá un nodo raíz el cual será el que tendrá los llamados a
     \end{figure}
 \newline
 \newline
-Dentro de este archivo debemos poner el llamado a cada elemento que se vaya agregando a nuestra librería ( Botones, Campos de texto, Tablas etc.), en la siguiente ilustración se muestra la manera en que se deben agregar los elementos.
+Dentro de este archivo debemos poner el llamado a cada elemento que se vaya agregando a nuestra biblioteca ( Botones, Campos de texto, Tablas etc.), en la siguiente ilustración se muestra la manera en que se deben agregar los elementos.
 \newline
 \newline
 \begin{figure}[H]
@@ -85,7 +85,7 @@ Los parámetros obligatorios para su funcionamiento son:
 \item \textbf{onClick} 
 \end{itemize}
 \newline
-Los colores que se usan son una constante definida por la librería ya que se considera que son cromáticamente compatibles entre ellos, este tema se abordará más adelante.
+Los colores que se usan son una constante definida por la biblioteca ya que se considera que son cromáticamente compatibles entre ellos, este tema se abordará más adelante.
 A continuación se muestra un fragmento del código que permite agregar la configuración requerida.
 \newline
 \newline
@@ -386,7 +386,7 @@ Los parámetros obligatorios para su funcionamiento son:
 
 
 \subsection{Elemento Image}
-Este elemento es de utilidad para agregar una imagen, en el cual solo basta con darle la dirección donde se encuentra ubicada y la librería agrega los estilos necesarios para hacer la imagen lucir.
+Este elemento es de utilidad para agregar una imagen, en el cual solo basta con darle la dirección donde se encuentra ubicada y la biblioteca agrega los estilos necesarios para hacer la imagen lucir.
 Los parámetros que el elemento necesita para su funcionamiento son los siguientes.
 \newline
     \newline
@@ -424,7 +424,7 @@ Los parámetros obligatorios para su funcionamiento son:
     
     \subsection{Elemento Loader}
 Este elemento se recomienda usar cuando se desea dar la retroalimentación al usuario, cuando se están ejecutando procesos de la aplicación y es necesario esperar a que estos terminen para poder avanzar.
-Con la presente librería es relativamente simple hacer la implementación.
+Con la presente biblioteca es relativamente simple hacer la implementación.
 
 El parámetro que el elemento necesita para su funcionamiento es.
 \newline
