--- a/Procedimiento/procedimiento.tex
+++ b/Procedimiento/procedimiento.tex
@@ -1,8 +1,8 @@
-        El objetivo de desarrollo de la presente librería se basa en el siguiente principio, “ cuando un elemento sea actualizado, sea un botón, cuadro de estado, entrada de texto, etc. el componente regresará un objeto el cual tendrá el nombre del elemento y el nuevo valor para que este sea actualizado en el state de React ”.  Con esto deseamos generar el  flujo de la Figura 8.1.
+        El objetivo de desarrollo de la presente biblioteca se basa en el siguiente principio, “ cuando un elemento sea actualizado, sea un botón, cuadro de estado, entrada de texto, etc. el componente regresará un objeto el cual tendrá el nombre del elemento y el nuevo valor para que este sea actualizado en el state de React ”.  Con esto deseamos generar el  flujo de la Figura 8.1.
         
                \begin{figure}[H]
            \includegraphics[width=1\textwidth]{./Imagenes/carbon-8.png}
-           \caption[Resultado esperado de la librería]{Resultado esperado de la librería}
+           \caption[Resultado esperado de la biblioteca]{Resultado esperado de la biblioteca}
              \end{figure}
         
         Importamos el elemento CheckBox desde “crown” dentro de el método render en return  ponemos el componente CheckBox y le damos los  siguientes  props.
