--- a/Procedimiento/publicacion.tex
+++ b/Procedimiento/publicacion.tex
@@ -1,6 +1,6 @@
-Finalmente una vez tenemos todos los elementos completamente desarrollados y terminados debemos proceder a publicar nuestra librería para que esta sea de uso libre para toda la comunidad de desarrolladores de software Web que implementan Node.
+Finalmente una vez tenemos todos los elementos completamente desarrollados y terminados debemos proceder a publicar nuestra biblioteca para que esta sea de uso libre para toda la comunidad de desarrolladores de software Web que implementan Node.
 
-Debemos configurar el nombre de nuestro paquete que será con el que las personas pueden encontrarlo, esta librería se llama "crown components", este nombre se especifica en el archivo package.json en el directorio raíz de nuestro proyecto en la llave “name”.
+Debemos configurar el nombre de nuestro paquete que será con el que las personas pueden encontrarlo, esta biblioteca se llama "crown components", este nombre se especifica en el archivo package.json en el directorio raíz de nuestro proyecto en la llave “name”.
 
 Tenemos que ingresar con nuestra cuenta desde la terminal con el siguiente comando.
   \newline
@@ -19,6 +19,6 @@ Una vez con la sesión iniciada en la terminal es posible publicar nuestro paque
     \includegraphics[width=0.7\textwidth]{./Imagenes/8.40.png}
     \caption[Publicar paquete]{Publicar paquete}
     \end{figure}
-        Y con esto tenemos nuestra librería publicada.
+        Y con esto tenemos nuestra biblioteca publicada.
     \clearpage
     
