--- a/Procedimiento/test.tex
+++ b/Procedimiento/test.tex
@@ -22,7 +22,7 @@ Y dentro de este directorio crearemos un archivo por cada uno de los componentes
     
  Dentro de este se tendrán un código para asegurar el funcionamiento, por ejemplo para el componente Button se diseñó el siguiente test.
  \newline
-\begin{figure}[H]
+\begin{figure}[H]biblioteca
     \includegraphics[width=1\textwidth]{./Imagenes/8.41t.png}
     \caption[Test del componente Button]{Test del componente Button}
     \end{figure}
