--- a/Procedimiento/ui-ux.tex
+++ b/Procedimiento/ui-ux.tex
@@ -1,18 +1,18 @@
-Uno de los puntos clave para obtener los resultados esperados de la librería, es tomar en cuenta la experiencia de usuario ( UX ) y la interfaz de usuario ( UI ), que podrían definirse de la siguiente manera.
+Uno de los puntos clave para obtener los resultados esperados de la biblioteca, es tomar en cuenta la experiencia de usuario ( UX ) y la interfaz de usuario ( UI ), que podrían definirse de la siguiente manera.
 
 \begin{itemize}
 \item \textbf{Experiencia de usuario ( UX ): } Es la sensación que una persona percibe, al usar una herramienta como puede ser una página web, o aplicación móvil, esto incluye la funcionalidad y la respuesta que recibe, logrando que una persona sienta que ya conoce la aplicación y conocer cada acción que realiza.
 \item \textbf{Interfaz de usuario ( UI ):  } Es la percepción visual de una web o aplicación móvil, esta puede ser agradable para el usuario y generar el interés o rechazo de la misma, y llegar a sentir emociones.
 \end{itemize}
 
-Se han encontrado una serie de parámetros, los cuales se logran obtener una interfaz y experiencia de usuario favorables, que serán implementados en la presente librería.
+Se han encontrado una serie de parámetros, los cuales se logran obtener una interfaz y experiencia de usuario favorables, que serán implementados en la presente biblioteca.
 
 \begin{itemize}
 \item \textbf{Sombras:} El uso de las sombras en los elementos de una interfaz gráfica, genera un mayor interés entre los elementos mostrados y da el efecto de tener una mayor altura dimensional.
 \item \textbf{Jerarquía de elementos:} Para que el usuario entienda el objetivo de la aplicación Web debe existir una jerarquía visual, para que el usuario entienda cual es el objetivo de la Web representado por elementos visualmente más grandes y los elementos por los cuales no tendrían que tener tanta importancia serán más pequeños.
 \item \textbf{Alineación vertical y horizontal:} Este punto puede ser visto como generar una cuadrícula, la cual cada elemento coincide vertical y horizontalmente.
 \item \textbf{Retroalimentación:} Para que el usuario tenga la sensación de que tiene todo el control de la Web y que sienta que sabe que está haciendo siempre, se deben proporcionar efectos para que esto sea posible, por ejemplo cuando pasas el mouse sobre algún elemento este debe reaccionar.
-\item \textbf{Tipo de fuente:} Para la correcta legibilidad de cualquier texto en la librería se usará la fuente llamada San Francisco desarrollada por Apple de la familia de las fuentes Sans-Serif.
+\item \textbf{Tipo de fuente:} Para la correcta legibilidad de cualquier texto en la biblioteca se usará la fuente llamada San Francisco desarrollada por Apple de la familia de las fuentes Sans-Serif.
 \item \textbf{Alto de línea:} Si se aumenta el alto de la línea permitirá que en un texto sea más legible porque existirá más espacio y no se tendrá texto que parezca encimado.
 \item \textbf{Consistencia:} Este punto trata de que todos los elementos tengan similitudes entre sí, no importa si sean del mismo tipo, esto será fácil para que el usuario conozca cada una de las pantallas aunque sea la primera vez que se visita. 
 \item \textbf{Colores:} Existe una actual tendencia por el uso de colores pasteles, ya que estos te hacen sentir familiar, ya que estos están presentes mayormente en la naturaleza.
