--- a/Introduccion/introduccion.tex
+++ b/Introduccion/introduccion.tex
@@ -2,18 +2,18 @@ JavaScript cuenta con un gestor de paquetes llamado NPM, este es encargado de ge
 Actualmente no es común encontrar alguna página Web en el que el cien por ciento sea desarrollado por un solo equipo, ya que existen herramientas que son fáciles de agregar y no tienen costo alguno.
 NPM es el conjunto de paquetes que los desarrolladores desean proveer a la sociedad para su libre uso.
 Es por esta razón que durante el presente documento se desea desarrollar otra herramienta para que las personas, tengan otra alternativa fácil de usar y que puedan ser implementada en sus proyectos rápidamente.
-Durante el presente documento se describe el proceso para desarrollar una librería. 
+Durante el presente documento se describe el proceso para desarrollar una biblioteca. 
 Se cubrirá la creación del ambiente requerido, instalación de paquetes, creación de ficheros y configuración de los mismos. 
 También se describira el desarrollo de cada uno de los componentes que se planea tener, se mostrará parte del código fuente que hace que estos funcionen correctamente, y los requisitos necesarios para que trabajen de manera adecuada. 
-Se dará una pequeña introducción al framework React, ya que la presente librería trabaja en conjunto con el.
-En el desarrollo de la librería se implementara una guía de estilos de código para que el código sea un estándar, esto se logra usando la guía de estilos propuesta por Airbnb \cite{airbnb}que es una de las más usadas ya que actualmente obtendremos como resultado final un código fuente consistente en todo el desarrollo del proyecto, también nos ayuda a tener un código mucho más legible y en la medida de lo posible eficiente, aunque en algunos casos nos vemos restringidos al tener un estilo de programación que difiere , así cualquier persona interesada podrá colaborar para aumentar las funcionalidades una vez una primera versión aquí desarrollada esté lista.
+Se dará una pequeña introducción al marco de trabajo React, ya que la presente biblioteca trabaja en conjunto con el.
+En el desarrollo de la biblioteca se implementara una guía de estilos de código para que el código sea un estándar, esto se logra usando la guía de estilos propuesta por Airbnb \cite{airbnb}que es una de las más usadas ya que actualmente obtendremos como resultado final un código fuente consistente en todo el desarrollo del proyecto, también nos ayuda a tener un código mucho más legible y en la medida de lo posible eficiente, aunque en algunos casos nos vemos restringidos al tener un estilo de programación que difiere , así cualquier persona interesada podrá colaborar para aumentar las funcionalidades una vez una primera versión aquí desarrollada esté lista.
 Al terminar el desarrollo se tomará el tema de los test que trata de la manera en que se comprueba el correcto funcionamiento de lo aquí hecho.
-Finalmente se muestra la manera de usar los componentes aquí desarrollados, la manera de instalar la librería y la correcta manera de implementarla.
+Finalmente se muestra la manera de usar los componentes aquí desarrollados, la manera de instalar la biblioteca y la correcta manera de implementarla.
 
-Esta librería está creada con base en React, motivo por el cual se crean componentes como campos de texto, imágenes, tablas y varios más elementos que pueden ser implementados como cualquier componente de React. 
+Esta biblioteca está creada con base en React, motivo por el cual se crean componentes como campos de texto, imágenes, tablas y varios más elementos que pueden ser implementados como cualquier componente de React. 
 
 Los componentes que aquí se desarrollan están estilizados en base a gusto personal pero siguiendo prácticas de diseño de interfaces y experiencia de usuario, dando la posibilidad de que cuando se implemente algún elemento a este se le puedan dar parámetros básicos como podrían ser el color o el tamaño.
 
-También cada uno de los componentes están conectados con el estado de React permitiendo un veloz desarrollo de la página Web que se desea hacer con esta librería, esto significa que al realizar el maquetado automáticamente ya se tendrá un control de los datos.
+También cada uno de los componentes están conectados con el estado de React permitiendo un veloz desarrollo de la página Web que se desea hacer con esta biblioteca, esto significa que al realizar el maquetado automáticamente ya se tendrá un control de los datos.
 
-Al finalizar el desarrollo se tendrá una librería probada y publicada en el gestor de paquetes NPM, para que cualquier persona pueda acceder a esta.
+Al finalizar el desarrollo se tendrá una biblioteca probada y publicada en el gestor de paquetes NPM, para que cualquier persona pueda acceder a esta.
